修改 daemon 输出名，并删除无用注释。

--- a/src/daemon/Makefile
+++ b/src/daemon/Makefile
@@ -1,17 +1,12 @@
-#
-# TODO: Move `libmongoclient.a` to /usr/local/lib so this can work on production servers
-#
- 
-CC := g++ # This is the main compiler
-# CC := clang --analyze # and comment out the linker last line for sanity
-TARGET := $(TARGET_DIR)/cwoj_runner
+CC := g++
+TARGET := $(TARGET_DIR)/cwoj_daemon
 SRCDIR := .
 SRCEXT := cpp
 INCEXT := h
 SOURCES := $(wildcard $(SRCDIR)/*.$(SRCEXT))
 INCLUDES := $(wildcard $(SRCDIR)/*.$(INCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILD_DIR)/%,$(SOURCES:.$(SRCEXT)=.o))
-CFLAGS := -g -std=c++11 # -Wall
+CFLAGS := -g -std=c++11
 LIB := -pthread -lmicrohttpd -lmysqlclient -lpthread
 INC := -I /usr/include/mysql
 
