增加没什么卵用的 RamDisk 兹瓷。

--- a/src/daemon/Makefile
+++ b/src/daemon/Makefile
@@ -7,7 +7,7 @@ SOURCES := $(wildcard $(SRCDIR)/*.$(SRCEXT))
 INCLUDES := $(wildcard $(SRCDIR)/*.$(INCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILD_DIR)/%,$(SOURCES:.$(SRCEXT)=.o))
 CFLAGS := -g -std=c++11
-LIB := -pthread -lmicrohttpd -lmysqlclient -lpthread
+LIB := -pthread -lmicrohttpd -lmysqlclient -lpthread -lboost_filesystem -lboost_system
 INC := -I /usr/include/mysql
 
 $(TARGET): $(OBJECTS)
