Migrate to multi-file CMake and prepare to add deb-packaging feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,30 +4,13 @@ project(cwoj_daemon)
 message(STATUS "Cwoj Daemon Open Source Project")
 message(STATUS "Please notice that this project can only be built and run on *nix OS.")
 
-set(EXECUTABLE_OUTPUT_PATH "bin")
-set(LIBRARY_OUTPUT_DIRECTORY "lib")
-
-find_package(Threads)
-find_package(Boost COMPONENTS system filesystem REQUIRED)
-
+set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
+set(LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-aux_source_directory(src/daemon/ DAEMON_SOURCE_FILES)
-aux_source_directory(src/runner/ RUNNER_SOURCE_FILES)
+add_subdirectory(src)
 
-add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES})
-add_executable(cwoj_daemon_runner ${RUNNER_SOURCE_FILES})
-
-target_link_libraries(cwoj_daemon_daemon mysqlclient)
-target_link_libraries(cwoj_daemon_daemon microhttpd)
-target_link_libraries(cwoj_daemon_daemon ${Boost_LIBRARIES})
-target_link_libraries(cwoj_daemon_daemon ${CMAKE_THREAD_LIBS_INIT})
-
-install(PROGRAMS bin/cwoj_daemon_daemon DESTINATION bin)
-install(PROGRAMS bin/cwoj_daemon_runner DESTINATION bin)
-install(FILES cwojconfig.ini DESTINATION /etc/)
-install(FILES cwojdaemon.service DESTINATION /etc/systemd/system/)
-install(CODE "MESSAGE(\"Please execute this command after the installation was completed:\")")
+install(CODE "MESSAGE(\"Please execute this command after the installation was completed(with superuser privelege):\")")
 install(CODE "MESSAGE(\"systemctl daemon-reload\")")
 
 message(STATUS "CMake preparation finished. Run following bash command to continue:")
