--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/cmake_install.cmake
-/CMakeCache.txt
-/Makefile
+**/cmake_install.cmake
+**/CMakeCache.txt
 /.idea
-/CMakeFiles/
-/bin/
+**/CMakeFiles/
+**/bin/
 /build/
-/install_manifest.txt
+**/install_manifest.txt
+**/Makefile
