--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-**/cmake_install.cmake
-**/CMakeCache.txt
-/.idea
 **/CMakeFiles/
 **/bin/
-/build/
+**/build/
+**/dist/
+**/_CPack_Packages/
+
+/.idea
+
+**/cmake_install.cmake
+/CPackSourceConfig.cmake
+/CPackConfig.cmake
+
+**/CMakeCache.txt
 **/install_manifest.txt
 **/Makefile
+
+**/*.deb
