--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_subdirectory(src)
 
-install(CODE "MESSAGE(\"Please execute this command after the installation was completed(with superuser privelege):\")")
+install(CODE "MESSAGE(\"Please execute this command after the installation was completed(with superuser privilege):\")")
 install(CODE "MESSAGE(\"systemctl daemon-reload\")")
 
 message(STATUS "CMake preparation finished. Run following bash command to continue:")
