--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(Boost_USE_STATIC_LIBS ON)
 find_package(Threads)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
-find_package(YAML_CPP)
+find_package(Yaml-cpp)
 
 aux_source_directory(. DAEMON_SOURCE_FILES)
 add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES} config_item.cpp)
@@ -10,7 +10,7 @@ target_link_libraries(cwoj_daemon_daemon mysqlclient)
 target_link_libraries(cwoj_daemon_daemon microhttpd)
 target_link_libraries(cwoj_daemon_daemon ${Boost_LIBRARIES})
 target_link_libraries(cwoj_daemon_daemon ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(cwoj_daemon_daemon YAML_CPP)
+target_link_libraries(cwoj_daemon_daemon yaml-cpp)
 
 install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/cwoj_daemon_daemon DESTINATION bin)
 
