Config yaml file; LanguageId; TempDir

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Boost COMPONENTS system filesystem REQUIRED)
 find_package(Yaml-cpp)
 
 aux_source_directory(. DAEMON_SOURCE_FILES)
-add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES} config_item.cpp)
+add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES})
 
 target_link_libraries(cwoj_daemon_daemon mysqlclient)
 target_link_libraries(cwoj_daemon_daemon microhttpd)
