--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(Boost_USE_STATIC_LIBS ON)
 find_package(Threads)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
-find_package(YamlCpp)
+find_package(Yaml-cpp)
 
 aux_source_directory(. DAEMON_SOURCE_FILES)
-add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES})
+add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES} config_item.cpp)
 
 target_link_libraries(cwoj_daemon_daemon mysqlclient)
 target_link_libraries(cwoj_daemon_daemon microhttpd)
