--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -2,8 +2,10 @@ set(Boost_USE_STATIC_LIBS ON)
 find_package(Threads)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 find_package(Yaml-cpp)
+find_package(seccomp)
 
 aux_source_directory(. DAEMON_SOURCE_FILES)
+aux_source_directory(./sandboxing/ DAEMON_SOURCE_FILES)
 add_executable(cwoj_daemon_daemon ${DAEMON_SOURCE_FILES} config_item.cpp)
 
 target_link_libraries(cwoj_daemon_daemon mysqlclient)
@@ -11,6 +13,7 @@ target_link_libraries(cwoj_daemon_daemon microhttpd)
 target_link_libraries(cwoj_daemon_daemon ${Boost_LIBRARIES})
 target_link_libraries(cwoj_daemon_daemon ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(cwoj_daemon_daemon yaml-cpp)
+target_link_libraries(cwoj_daemon_daemon seccomp)
 
 install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/cwoj_daemon_daemon DESTINATION bin)
 
