Config decoupling finished; Log finished(Don't forget to modify config file, FYI see the example)

--- a/cwojconfig.ini
+++ b/cwojconfig.ini
@@ -6,6 +6,10 @@ DATABASE_PASS=YOUR_PASSWORD
 DATABASE_NAME=cwoj
 RUC_PATH=
 
+[log]
+NORMAL_LOG_FILE=
+EXCEPTION_LOG_FILE=
+
 [lang1]
 ext=cpp
 extra_mem=20480
